Changed layout and added additional info in forms of claim ,insure

--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Insure - Insurance HTML Template</title>
+    <title>Our Services</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -40,7 +40,7 @@
 
 
     <!-- Topbar Start -->
-    <div class="container-fluid bg-dark text-white-50 py-2 px-0 d-none d-lg-block">
+    <!-- <div class="container-fluid bg-dark text-white-50 py-2 px-0 d-none d-lg-block">
         <div class="row gx-0 align-items-center">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Topbar End -->
 
 
@@ -85,8 +85,8 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Claims</a>
                     <div class="dropdown-menu bg-light border-0 m-0">
-                        <a href="feature.html" class="dropdown-item">File a New Claim</a>
-                        <a href="appointment.html" class="dropdown-item">Track an Existing Claim</a>
+                        <a href="claimSubmission.html" class="dropdown-item">File a New Claim</a>
+                        <a href="otpVerification.html" class="dropdown-item">Track an Existing Claim</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact Us</a>
@@ -104,7 +104,7 @@
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb mb-0">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                    <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
                     <li class="breadcrumb-item active" aria-current="page">Services</li>
                 </ol>
             </nav>
@@ -129,7 +129,7 @@
                             <h4 class="mb-0">Car Insurance</h4>
                         </div>
                         <p class="mb-4">Protect Your Ride, Secure Your Future – Affordable Coverage, Hassle-Free Claims, and 24/7 Support!</p>
-                        <a class="btn btn-light px-3" href="">Insure</a>
+                        <a class="btn btn-light px-3" href="carInsure.html">Insure</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -141,7 +141,7 @@
                             <h4 class="mb-0">Bike Insurance</h4>
                         </div>
                         <p class="mb-4">Ride Fearless, Insure Smart – Affordable Bike Insurance with Instant Claims & 24/7 Roadside Assistance!</p>
-                        <a class="btn btn-light px-3" href="">Insure</a>
+                        <a class="btn btn-light px-3" href="bikeInsure.html">Insure</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
