FrontEnd Almost Done

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
                 <a href="contact.html" class="nav-item nav-link">Contact Us</a>
             </div>
         </div>
-        <a href="" class="btn btn-primary px-3 d-none d-lg-block">Get A Quote</a>
+        <a href="login.html" class="btn btn-primary px-3 d-none d-lg-block me-3">Login</a>
+
+        <a href="signup.html" class="btn btn-primary px-3 d-none d-lg-block">SignUp</a>
     </nav>
     <!-- Navbar End -->
 
@@ -310,7 +312,7 @@
                             <h4 class="mb-0">Road Side Assistance</h4>
                         </div>
                         <p class="mb-4">24/7 Roadside Assistance – Fast, Reliable, and Always There When You Need Us! </p>
-                        <a class="btn btn-light px-3" href="">Read More</a>
+                        <a class="btn btn-light px-3" href="rsa.html">Read More</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -319,10 +321,10 @@
                             <div class="service-icon flex-shrink-0 bg-primary rounded-end me-4">
                                 <img class="img-fluid" src="img/icon/icon-08-light.png" alt="">
                             </div>
-                            <h4 class="mb-0">Life Insurance</h4>
+                            <h4 class="mb-0">Check your Challans</h4>
                         </div>
-                        <p class="mb-4">Coming Soon!</p>
-                        <a class="btn btn-light px-3" href="">Read More</a>
+                        <p class="mb-4">Check your pending vehicle challans for free through HexaCover</p>
+                        <a class="btn btn-light px-3" href="challan.html">Check Now</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -331,10 +333,10 @@
                             <div class="service-icon flex-shrink-0 bg-primary rounded-end me-4">
                                 <img class="img-fluid" src="img/icon/icon-07-light.png" alt="">
                             </div>
-                            <h4 class="mb-0">Business Insurance</h4>
+                            <h4 class="mb-0">Check Coverage</h4>
                         </div>
-                        <p class="mb-4">Coming Soon!</p>
-                        <a class="btn btn-light px-3" href="">Read More</a>
+                        <p class="mb-4">Know which policy covers what damages before Insuring your Vehicle</p>
+                        <a class="btn btn-light px-3" href="coverage.html">Know about Coverage</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -343,10 +345,10 @@
                             <div class="service-icon flex-shrink-0 bg-primary rounded-end me-4">
                                 <img class="img-fluid" src="img/icon/icon-06-light.png" alt="">
                             </div>
-                            <h4 class="mb-0">Property Insurance</h4>
+                            <h4 class="mb-0">Refer a Friend</h4>
                         </div>
-                        <p class="mb-4">Coming Soon!</p>
-                        <a class="btn btn-light px-3" href="">Read More</a>
+                        <p class="mb-4">Refer a Friend and earn Bonus for each referral</p>
+                        <a class="btn btn-light px-3" href="referAFriend.html">Refer Now</a>
                     </div>
                 </div>
             </div>
@@ -576,11 +578,11 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="about.html">Contact Us</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="rsa.html">Support</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
@@ -605,6 +607,7 @@
             </div>
         </div>
     </div>
+    
     <!-- Footer End -->
 
 
